5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1832_1654.log
== TEST (2019-06-13 19:37:49) 
-- CODE:
from numpy import*
string=input("digite o numero:")
d=.split(',')
a=0
for i in string:
	if(i>string):
		a=a+1
	
-- ERROR:
File "XXXX", line 3
    d=.split(',')
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:38:11) 
-- CODE:
from numpy import*
string=input("digite o numero:").split(',')
a=0
for i in string:
	if(i>string):
		a=a+1
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:38:29) 
-- CODE:
from numpy import*
string=input("digite o numero:").split(',')
a=0
for i in string:
	if(i>string):
		a=a+1
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:39:36) 
-- CODE:
from numpy import*
string=input("digite o numero:").split(',')
a=0
for i in string:
	if(i==(size(string))):
		a=a+1
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
